bug #54601: r=waterson, a=brendan.  Fix string allocation policy -- allocate exact size, double on fault ... thanks to everybody who helped me test this patch.