xpcom/ds/nsStr.cpp
@@ -121,6 +121,16 @@ PRBool nsStr::GrowCapacity(nsStr& aDest,PRUint32 aNewLength) {
     nsStr theTempStr;
     nsStr::Initialize(theTempStr,aDest.mCharSize);
 
+#ifndef NS_USE_OLD_STRING_ALLOCATION_STRATEGY
+      // the new strategy is, allocate exact size, double on grows
+    if ( aDest.mCapacity ) {
+      PRUint32 newCapacity = aDest.mCapacity;
+      while ( newCapacity < aNewLength )
+        newCapacity <<= 1;
+      aNewLength = newCapacity;
+    }
+#endif
+
     result=EnsureCapacity(theTempStr,aNewLength);
     if(result) {
       if(aDest.mLength) {
@@ -656,7 +666,7 @@ PRBool nsStr::Alloc(nsStr& aDest,PRUint32 aCount) {
   static int mAllocCount=0;
   mAllocCount++;
 
-#ifndef NS_DONT_USE_CHUNKY_STRING_ALLOCATION
+#ifdef NS_USE_OLD_STRING_ALLOCATION_STRATEGY
   //we're given the acount value in charunits; now scale up to next multiple.
   PRUint32	theNewCapacity=kDefaultStringSize;
   while(theNewCapacity<aCount){ 
@@ -667,6 +677,7 @@ PRBool nsStr::Alloc(nsStr& aDest,PRUint32 aCount) {
   PRUint32 theSize=(theNewCapacity<<aDest.mCharSize);
   aDest.mStr = (char*)nsMemory::Alloc(theSize);
 #else
+    // the new strategy is, allocate exact size, double on grows
   aDest.mCapacity = aCount;
   aDest.mStr = (char*)nsMemory::Alloc((aCount+1)<<aDest.mCharSize);
 #endif
